--- a/miniprogram-3/app.json
+++ b/miniprogram-3/app.json
@@ -1,49 +1,51 @@
 {
   "pages": [
-    "pages/userLogin/userLogin",
-    "pages/Mytest/Mytest",
-    "pages/Mypage/Mytest",
     
+    "pages/Mypage/Mytest",
+    "pages/playground1/playground1",
+    "pages/Mytest/Mytest",
+    "pages/shouye/shouye",
+    "pages/publicer/publicer",
+    "pages/editor/editor",
+    "pages/playground2/playground2",
+    "pages/userLogin/userLogin",
     "pages/Feedback/Feedback",
     "pages/Myinfo/Myinfo",
-    
-    
     "pages/forget/forget",
     "pages/userRegist/userRegist",
-    "pages/playground1/playground1",
     "pages/chat/chat",
     "pages/test/test",
-    "pages/minePage/mine",
-    "pages/playground2/playground2"
+    "pages/minePage/mine"
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#000",
+    "navigationBarBackgroundColor": "#ffff",
     "navigationBarTitleText": "时间典当铺",
-    "navigationBarTextStyle": "white"
+    "navigationBarTextStyle": "black"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
   "tabBar": {
+    "color": "#666666",
+    "selectedColor": "#FF6600",
     "list": [
       {
-        "pagePath": "pages/playground1/playground1",
-        "iconPath": "pages/resouce/play1.png",
-        "selectedIconPath": "pages/resouce/play1.png",
-        "text":"广场1"
-      },
-      {
-        "pagePath": "pages/playground2/playground2",
+        "pagePath": "pages/shouye/shouye",
         "iconPath": "pages/resouce/play2.png",
         "selectedIconPath": "pages/resouce/play2.png",
-        "text":"广场2"
+        "text": "首页"
       },
       {
-        "pagePath": "pages/Mytest/Mytest",
+        "pagePath": "pages/publicer/publicer",
+        "iconPath": "pages/resouce/play1.png",
+        "selectedIconPath": "pages/resouce/play1.png",
+        "text": "发布"
+      },
+      {
+        "pagePath": "pages/Mypage/Mytest",
         "iconPath": "pages/resouce/mypage.png",
         "selectedIconPath": "pages/resouce/mypage.png",
         "text": "我的"
-       
       }
     ]
   },
