--- a/miniprogram-3/project.config.json
+++ b/miniprogram-3/project.config.json
@@ -24,7 +24,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
-	"appid": "wxe43e07bc51d049fa",
+	"appid": "wx92aed16e4aa15bd1",
 	"projectname": "video_demo",
 	"debugOptions": {
 		"hidedInDevtools": []
