yueyue second commit

--- a/miniprogram-3/project.config.json
+++ b/miniprogram-3/project.config.json
@@ -7,10 +7,11 @@
 		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
+		"preloadBackgroundData": false,
 		"minified": true,
 		"newFeature": true,
-		"coverView": true,
 		"autoAudits": false,
+		"coverView": true,
 		"showShadowRootInWxmlPanel": true,
 		"scopeDataCheck": false,
 		"checkInvalidKey": true,
@@ -20,11 +21,12 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		}
+		},
+		"useCompilerModule": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.4",
-	"appid": "wx92aed16e4aa15bd1",
+	"appid": "wx7690cda3ba137238",
 	"projectname": "video_demo",
 	"debugOptions": {
 		"hidedInDevtools": []
