--- a/miniprogram-3/app.json
+++ b/miniprogram-3/app.json
@@ -15,7 +15,10 @@
     "pages/userRegist/userRegist",
     "pages/chat/chat",
     "pages/test/test",
-    "pages/minePage/mine"
+    "pages/minePage/mine",
+    "pages/playground1/playground1-1/playground1-1",
+    "pages/opp-person/opp-person",
+    "pages/playground1/plg-chat/plg-chat"
   ],
   "window": {
     "backgroundTextStyle": "light",
